--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/scrollreveal"></script>
-    <title>ADev</title>
+    <title>ADev-code & Designer</title>
    
     <!-- link de estilização-->
     <link rel="stylesheet" href="./css/style.css">
