feat: contacto adicionado na pagina

--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@
 
   <footer class="bg-gray-800 text-white py-6">
     <div class="text-center">
-      <p class="text-sm">© 2025 Armando Baltazar | Desenvolvedor Web</p>
+      <p class="text-sm">© 2025 Armando Baltazar | Enganheiro de software </p>
+      <p class="text-sm">Contactos: +244 933 493 238 Email: armandobaltazar38@gmail.com </p>
     </div>
   </footer>
 <script>
