feat: contacto adicionado na pagina

--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
           <div class="hover-glow bgs-gray-100 p-4 rounded transition-all">
             <h3 class="text-xl font-bold text-pink-600 mb-4"><i class="fas fa-code mr-2"></i>Linguagens</h3>
             <ul class="space-y-4 font-bold text-whites-700 text-sm">
-              <li><i class="fab fa-js-square mr-2 text-yellow-500"></i>JavaScript (ES6+)</li>
+              <li><i class="fab fa-js-square mr-2 text-yellow-500"></i>JavaScript (ES6+)</li> 
               <li><i class="fas fa-code-branch mr-2 text-blue-600"></i>TypeScript</li>
+              <li><i class="fas fa-python mr-2 text-blue-600"></i>Python</li>
               <li><i class="fab fa-php mr-2 text-indigo-600"></i>PHP</li>
             </ul>
           </div>
@@ -266,7 +267,7 @@
     <div class="text-center">
       <p class="text-sm">© 2025 Armando Baltazar | Enganheiro de software </p>
       <p class="text-sm">Contactos: +244 933 493 238 Email: armandobaltazar38@gmail.com </p>
-    </div>
+    </div> 
   </footer>
 <script>
   const dadosProjetos = {
